# cv_dataset_generator

./: .gitignore  README.md
doc/: UML.graphml
gazebo/: Dockerfile  README.md
gazebo/src/camera_controls/: CMakeLists.txt  package.xml
gazebo/src/camera_controls/launch/: spawn_camera.launch
gazebo/src/cottage/: CMakeLists.txt  package.xml
gazebo/src/dataset_generator/: CMakeLists.txt  package.xml
ogre/: CMakeLists.txt  Dockerfile  README.md  Shpere.hpp  SimpleScene.cpp  resources.cfg
ogre/input/: camera_info.yaml  camera_info_autobot10.yaml  camera_info_example_mod.yaml  trajectory.txt  trajectory2.txt  trajectory_checkerboard.txt
ogre/materials/: basic.material  cottage_texture.material  ground.material  light_1.material  light_2.material  plane.material  solid.material
ogre/mesh/: Cube.002.mesh
ogre/mesh/basic/: Cube.mesh  Plane.mesh  Sphere.002.mesh
ogre/mesh/checkerboard/: Board.mesh  Checkerboard.mesh
ogre/mesh/cottage/: Cube.002.mesh  Plane.002.mesh  Plane.003.mesh  Plane.004.mesh
ogre/resources/: StatusFont.fontdef  StatusOverlay.overlay
ogre/scene/: basic.scene  checkerboard.scene  cottage_blender.scene
ogre/src/: Main.cpp
ogre/src/controller/: Config.cpp  Config.hpp  ControlMessage.cpp  ControlMessage.hpp  Controller.cpp  Controller.hpp  Trajectory.cpp  Trajectory.hpp
ogre/src/model/: Direction.hpp  Model.cpp  Model.hpp  Position.cpp  Position.hpp
ogre/src/model/entities/: Camera.cpp  Camera.hpp  Cube.cpp  Cube.hpp  Entity.cpp  Entity.hpp  Ground.cpp  Ground.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp
ogre/src/view/: View.cpp  View.hpp
project/: project.sln  project.uproject
project/Config/: DefaultEngine.ini  DefaultGame.ini
project/Content/: ActualLevel.umap  AddDevice.uasset  DeviceEditor.uasset  ExistinDeviceList.uasset  HUD.uasset  MainMenu.uasset  NewMaterial.uasset  NewPaperSprite.uasset  PauseMenu.uasset  SampleLevel.umap  SampleLevel_BuiltData.uasset  SampleSpawnable.uasset
project/Content/Blueprints/: NewGameInstance.uasset  SimGameMode.uasset
project/Content/Levels/: ActualLevel.umap  ActualLevel_BuiltData.uasset  SampleLevel.umap  SampleLevel_BuiltData.uasset  SampleMovable.uasset
project/Content/Materials/: GlowingMasterMaterial.uasset
project/Content/Objects/: CameraMesh.uasset  CameraSpawnable.uasset  LightSource.uasset  SampleSpawnable.uasset
project/Content/UI/: AddDevice.uasset  AddLightSource.uasset  DeviceEditor.uasset  EditDevice.uasset  ExistinDeviceElement.uasset  ExistinDeviceList.uasset  HUD.uasset  MainMenu.uasset  PauseMenu.uasset
project/Source/: project.Target.cs  projectEditor.Target.cs
project/Source/project/: BaseCamera.cpp  BaseCamera.h  BaseDevice.cpp  BaseDevice.h  BaseLidar.cpp  BaseLidar.h  CustomGM.cpp  CustomGM.h  DeviceDetection.cpp  DeviceDetection.h  FileWriter.cpp  FileWriter.h  MyCameraActor.h  MyClass.h  MyClass1.h  SimGameMode.cpp  SimGameMode.h  project.Build.cs  project.cpp
(+91 files in other folders)
